# clase_python

./: main.sh  pyproject.toml
clase_python/: main.py
clase_python/core/abcs/: vehicle_abcs.py
clase_python/model/: airplane.py  car.py
tests/: conftest.py  test_car.py
